Criado através do Colaboratory

--- a/Cópia_de_Avaliação_1_Grupo_J.ipynb
+++ b/Cópia_de_Avaliação_1_Grupo_J.ipynb
@@ -34,7 +34,7 @@
       },
       "source": [
         "# Avaliação 1 - ENGD02\n",
-        "## Desafio: Perspectivas do covid-19  \n",
+        "## Desafio: Perspectivas do COVID-19  \n",
         "\n",
         "### Cliente 4: ONG de refugiados sul-americanos;\n",
         "\n",
