Criado através do Colaboratory

--- a/Semana_do_Python_Aula_04.ipynb
+++ b/Semana_do_Python_Aula_04.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Semana_do_Python_Aula_04.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOz2HyAJfqKxAd3VFd2km3M",
+      "authorship_tag": "ABX9TyPT3/BO5YJVoCovi60KF2mo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/gabriel7268/Notebooks/blob/Python-Week/Semana_do_Python_Aula_04.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/gabriel7268/Notebooks/blob/main/Semana_do_Python_Aula_04.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -287,8 +287,8 @@
       "source": [
         "# import dataset\n",
         "import pandas as pd\n",
-        "\n",
-        "produtos_df = pd.read_excel(\"Produtos.xlsx\")\n",
+        "link = 'https://github.com/gabriel7268/Datasets/blob/main/Produtos.xlsx?raw=true'\n",
+        "produtos_df = pd.read_excel(link)\n",
         "display(produtos_df)"
       ],
       "execution_count": null,
