Criado através do Colaboratory

--- a/Semana_do_Python_Aula_02.ipynb
+++ b/Semana_do_Python_Aula_02.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Semana_do_Python_Aula_02.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPlDmwtdhxxBoeFB4E0/PiV",
+      "authorship_tag": "ABX9TyNbyCLB9zxzgeWHLlxGOSAp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/gabriel7268/Notebooks/blob/Python-Week/Semana_do_Python_Aula_02.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/gabriel7268/Notebooks/blob/main/Semana_do_Python_Aula_02.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -50,7 +50,7 @@
         "import pandas as pd\n",
         "import plotly.express as px"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -61,11 +61,12 @@
           "height": 1000
         },
         "id": "qLEJNjxnknbV",
-        "outputId": "22ffd73b-0653-41e6-ad82-e535627469aa"
+        "outputId": "81390db4-8b08-47f4-f691-c083aac24c1c"
       },
       "source": [
         "# Passo 1: Importar base de dados\n",
-        "tabela_clientes = pd.read_csv('telecom_users.csv') #Ler base de dados\n",
+        "path = 'https://github.com/gabriel7268/Datasets/raw/main/telecom_users.csv'\n",
+        "tabela_clientes = pd.read_csv(path) #Ler base de dados\n",
         "tabela_clientes = tabela_clientes.drop(\"Unnamed: 0\", axis=1) #Exclui a columa Unnanmed: 0, axis =1 é columa 0 é linha\n",
         "\n",
         "# Passo 2: Visualizar a base de dados para encontrar o que temos disponível\n",
@@ -84,7 +85,7 @@
         "display(tabela_clientes.info())\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
