Criado através do Colaboratory

--- a/Semana_do_Python_Aula_03.ipynb
+++ b/Semana_do_Python_Aula_03.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Semana_do_Python_Aula_03.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN+jFW4ozQIl7pQX7rd4uan",
+      "authorship_tag": "ABX9TyP0vha9VDaFrXkpdgec5Xn0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/gabriel7268/Notebooks/blob/Python-Week/Semana_do_Python_Aula_03.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/gabriel7268/Python_Week-Hashtag_Treinamentos/blob/main/Semana_do_Python_Aula_03.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -65,16 +65,16 @@
           "height": 623
         },
         "id": "rZazDpdUG39D",
-        "outputId": "64292a93-fbc8-438d-be37-4de514a77517"
+        "outputId": "2c0a1e24-d3dd-4e00-95eb-d9740a53feb7"
       },
       "source": [
         "import pandas as pd\n",
-        "\n",
-        "tabela = pd.read_csv('advertising.csv')\n",
+        "path = 'https://github.com/gabriel7268/Datasets/raw/main/advertising.csv'\n",
+        "tabela = pd.read_csv(path)\n",
         "display(tabela.info())\n",
         "display(tabela)"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
